# outdoor-sports-planner

./: .gitignore  .pre-commit-config.yaml  Dockerfile.analyzer  Dockerfile.aqi  Dockerfile.weather  Dockerfile.web  Procfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml  ci.yml  deploy.yaml
applications/data_analyzer_server/src/: data_analyzer_server.py
applications/data_analyzer_server/test/: data_analyzer_server_test.py
applications/data_collector_server/src/: aqi_data_collector_server.py  weather_data_collector_server.py
applications/data_collector_server/test/: aqi_data_collector_server_test.py  weather_data_collector_server_test.py
applications/web_server/src/: app.py
applications/web_server/src/templates/: index.html  prediction.html  prediction_unavailable.html
applications/web_server/tests/: app_test.py
components/data_analyzers/src/: aqi_calculator.py  aqi_categories.json  pollutant_breakpoints.json  weather_aqi_analyzer.py
components/data_analyzers/test/: aqi_calculator_test.py  mock_aqi_data.pkl  mock_weather_aqi_analyzer_results.pkl  mock_weather_data.pkl  weather_aqi_analyzer_test.py
components/data_collectors/src/: air_quality_data_collector.py  coordinates_collector.py  weather_data_collector.py  weather_data_gateway.py
components/data_collectors/tests/: air_quality_data_collector_test.py  coordinates_collector_test.py  test_aqicn_json_response.json  weather_api_mock_current.pkl  weather_api_mock_daily.pkl  weather_data_collector_test.py
components/data_gateways/src/: air_quality_data_gateway.py  weather_data_gateway.py
components/data_gateways/tests/: air_quality_data_gateway_test.py  weather_data_gateway_test.py
components/database_support/: air_quality_record.py  weather_record.py
components/server_support/src/: app_data_fetcher.py
